# PGMA-Image-Compression

./: CMakeLists.txt  IanHarmon-CS4378-Assign01.cpp  IanHarmon-CS4378-Assign01.h  README.md  Report on LZ compression.docx  baboon.7z  output_0_variance.7z  output_0_variance.pgma  output_16_variance.7z  output_16_variance.pgma  output_256_variance.7z  output_256_variance.pgma  output_64_variance.7z  output_64_variance.pgma
